@@ -103,9 +103,9 @@ public class Comparison {
                 actual.getThreeWindingsTransformerStream(),
                 this::compareThreeWindingsTransformers);
         compare(
-                expected.getDanglingLineStream(DanglingLineFilter.ALL).filter(dl -> !dl.isPaired()),
-                actual.getDanglingLineStream(DanglingLineFilter.ALL).filter(dl -> !dl.isPaired()),
-                this::compareDanglingLines);
+                expected.getBoundaryLineStream(BoundaryLineFilter.ALL).filter(bl -> !bl.isPaired()),
+                actual.getBoundaryLineStream(BoundaryLineFilter.ALL).filter(bl -> !bl.isPaired()),
+                this::compareBoundaryLines);
         diff.end();
     }
 
@@ -524,9 +524,9 @@ public class Comparison {
         // so we sort points by active power, then compare resulting lists point by point
         Comparator<Point> comparePoints = (p0, p1) -> Double.compare(p0.getP(), p1.getP());
         List<Point> e = expected.getPoints().stream().sorted(comparePoints)
-                .collect(Collectors.toList());
+                .toList();
         List<Point> a = actual.getPoints().stream().sorted(comparePoints)
-                .collect(Collectors.toList());
+                .toList();
         compare("reactiveCapabilityCurve.size", e.size(), a.size());
         for (int k = 0; k < e.size(); k++) {
             Point pe = e.get(k);
@@ -577,7 +577,7 @@ public class Comparison {
                 actual.getCurrentLimits2().orElse(null));
     }
 
-    private void compareDanglingLines(DanglingLine expected, DanglingLine actual) {
+    private void compareBoundaryLines(BoundaryLine expected, BoundaryLine actual) {
         equivalent("VoltageLevel",
                 expected.getTerminal().getVoltageLevel(),
                 actual.getTerminal().getVoltageLevel());
