@@ -7,7 +7,6 @@
  */
 package com.powsybl.cim;
 
-import com.google.common.collect.ImmutableSet;
 import com.powsybl.commons.PowsyblException;
 import com.powsybl.commons.exceptions.UncheckedXmlStreamException;
 import com.powsybl.commons.util.StringAnonymizer;
@@ -28,6 +27,9 @@ import java.nio.file.Path;
 import java.util.*;
 import java.util.zip.ZipEntry;
 import java.util.zip.ZipOutputStream;
+
+import static com.powsybl.commons.xml.XmlUtil.getXMLInputFactory;
+import static com.powsybl.commons.xml.XmlUtil.getXMLOutputFactory;
 
 /**
  * @author Geoffroy Jamgotchian {@literal <geoffroy.jamgotchian at rte-france.com>}
@@ -52,9 +54,9 @@ public class CimAnonymizer {
         }
     }
 
-    private static final Set<String> NAMES_TO_EXCLUDE = ImmutableSet.of("PATL", "TATL");
+    private static final Set<String> NAMES_TO_EXCLUDE = Set.of("PATL", "TATL");
 
-    private static final Set<String> DESCRIPTIONS_TO_EXCLUDE = ImmutableSet.of();
+    private static final Set<String> DESCRIPTIONS_TO_EXCLUDE = Set.of();
 
     private static final String RDF_URI = "http://www.w3.org/1999/02/22-rdf-syntax-ns#";
 
@@ -64,9 +66,9 @@ public class CimAnonymizer {
     private static final QName RDF_RESOURCE = new QName(RDF_URI, "resource");
     private static final QName RDF_ABOUT = new QName(RDF_URI, "about");
 
-    private static class XmlStaxContext {
-        private final XMLInputFactory inputFactory = XMLInputFactory.newFactory();
-        private final XMLOutputFactory outputFactory = XMLOutputFactory.newFactory();
+    private static final class XmlStaxContext {
+        private final XMLInputFactory inputFactory = getXMLInputFactory();
+        private final XMLOutputFactory outputFactory = getXMLOutputFactory();
         private final XMLEventFactory eventFactory = XMLEventFactory.newInstance();
     }
 
@@ -293,7 +295,9 @@ public class CimAnonymizer {
         StringAnonymizer dictionary = loadDic(dictionaryFile);
 
         // anonymize each file of the archive
-        try (ZipFile zipFileData = new ZipFile(Files.newByteChannel(cimZipFile))) {
+        try (ZipFile zipFileData = ZipFile.builder()
+            .setSeekableByteChannel(Files.newByteChannel(cimZipFile))
+            .get()) {
 
             Set<String> rdfIdValues = skipExternalRef ? getRdfIdValues(zipFileData) : null;
 
