@@ -11,6 +11,7 @@ import com.fasterxml.jackson.databind.ObjectMapper;
 import com.fasterxml.jackson.datatype.jsr310.JavaTimeModule;
 import com.google.common.jimfs.Configuration;
 import com.google.common.jimfs.Jimfs;
+import com.powsybl.ieeecdf.model.elements.IeeeCdfTieLine;
 import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
@@ -19,12 +20,15 @@ import java.io.BufferedReader;
 import java.io.BufferedWriter;
 import java.io.IOException;
 import java.io.InputStreamReader;
+import java.io.StringReader;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.FileSystem;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.util.Objects;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertThrows;
 
 /**
  * @author Geoffroy Jamgotchian {@literal <geoffroy.jamgotchian at rte-france.com>}
@@ -48,7 +52,7 @@ class IeeeCdfReaderWriterTest {
     private void testIeeeFile(String fileName) throws IOException {
         IeeeCdfModel model;
         // read
-        try (BufferedReader reader = new BufferedReader(new InputStreamReader(getClass().getResourceAsStream("/" + fileName)))) {
+        try (BufferedReader reader = new BufferedReader(new InputStreamReader(Objects.requireNonNull(getClass().getResourceAsStream("/" + fileName))))) {
             model = new IeeeCdfReader().read(reader);
         }
 
@@ -106,15 +110,24 @@ class IeeeCdfReaderWriterTest {
 
     @Test
     void testTieLine() throws IOException {
-        try (BufferedReader reader = new BufferedReader(new InputStreamReader(getClass().getResourceAsStream("/tieline.txt")))) {
+        try (BufferedReader reader = new BufferedReader(new InputStreamReader(Objects.requireNonNull(getClass().getResourceAsStream("/tieline.txt"))))) {
             IeeeCdfModel model = new IeeeCdfReader().read(reader);
             assertEquals(1, model.getTieLines().size());
-            IeeeCdfTieLine tieLine = model.getTieLines().get(0);
+            IeeeCdfTieLine tieLine = model.getTieLines().getFirst();
             assertEquals(1, tieLine.getMeteredBusNumber());
             assertEquals(2, tieLine.getMeteredAreaNumber());
             assertEquals(3, tieLine.getNonMeteredBusNumber());
             assertEquals(4, tieLine.getNonMeteredAreaNumber());
             assertEquals(5, tieLine.getCircuitNumber());
+        }
+    }
+
+    @Test
+    void testInvalidFile() throws IOException {
+        try (BufferedReader reader = new BufferedReader(new StringReader(""))) {
+            IeeeCdfReader r = new IeeeCdfReader();
+            IllegalArgumentException e = assertThrows(IllegalArgumentException.class, () -> r.read(reader));
+            assertEquals("Failed to parse the IeeeCdfModel", e.getMessage());
         }
     }
 }
