@@ -10,7 +10,6 @@ package com.powsybl.timeseries;
 import com.fasterxml.jackson.core.JsonGenerator;
 import com.fasterxml.jackson.core.JsonParser;
 import com.fasterxml.jackson.core.JsonToken;
-import com.google.common.collect.ImmutableMap;
 
 import java.io.IOException;
 import java.io.UncheckedIOException;
@@ -33,7 +32,8 @@ public class TimeSeriesMetadata {
     private final TimeSeriesIndex index;
 
     public TimeSeriesMetadata(String name, TimeSeriesDataType dataType, TimeSeriesIndex index) {
-        this(name, dataType, ImmutableMap.of(), index);
+        // The order of the Map.of() elements is not constant/predictable so we have to build an unmodifiableMap LinkedHashMap ourselves
+        this(name, dataType, Collections.unmodifiableMap(new LinkedHashMap<>()), index);
     }
 
     public TimeSeriesMetadata(String name, TimeSeriesDataType dataType, Map<String, String> tags, TimeSeriesIndex index) {
@@ -84,10 +84,10 @@ public class TimeSeriesMetadata {
         }
     }
 
-    private static class JsonParsingContext {
+    private static final class JsonParsingContext {
         private String name;
         private TimeSeriesDataType dataType;
-        private Map<String, String> tags = new LinkedHashMap<>();
+        private final Map<String, String> tags = new LinkedHashMap<>();
         private TimeSeriesIndex index;
         private boolean insideTags = false;
 
@@ -96,8 +96,8 @@ public class TimeSeriesMetadata {
         }
     }
 
-    static void parseFieldName(JsonParser parser, JsonParsingContext context) throws IOException {
-        String fieldName = parser.getCurrentName();
+    static void parseFieldName(JsonParser parser, JsonParsingContext context, TimeSeries.TimeFormat timeFormat) throws IOException {
+        String fieldName = parser.currentName();
         if (context.insideTags) {
             context.tags.put(fieldName, parser.nextTextValue());
         } else {
@@ -109,7 +109,8 @@ public class TimeSeriesMetadata {
                 case "dataType" -> context.dataType = TimeSeriesDataType.valueOf(parser.nextTextValue());
                 case "tags" -> context.insideTags = true;
                 case RegularTimeSeriesIndex.TYPE -> context.index = RegularTimeSeriesIndex.parseJson(parser);
-                case IrregularTimeSeriesIndex.TYPE -> context.index = IrregularTimeSeriesIndex.parseJson(parser);
+                case IrregularTimeSeriesIndex.TYPE -> context.index = IrregularTimeSeriesIndex.parseJson(parser,
+                    timeFormat == TimeSeries.TimeFormat.MILLIS ? TimeSeriesIndex.ExportFormat.MILLISECONDS : TimeSeriesIndex.ExportFormat.NANOSECONDS);
                 case InfiniteTimeSeriesIndex.TYPE -> context.index = InfiniteTimeSeriesIndex.parseJson(parser);
                 default -> throw new IllegalStateException("Unexpected field name " + fieldName);
             }
@@ -117,12 +118,16 @@ public class TimeSeriesMetadata {
     }
 
     public static TimeSeriesMetadata parseJson(JsonParser parser) {
+        return parseJson(parser, TimeSeries.TimeFormat.MILLIS);
+    }
+
+    public static TimeSeriesMetadata parseJson(JsonParser parser, TimeSeries.TimeFormat timeFormat) {
         try {
             JsonToken token;
             JsonParsingContext context = new JsonParsingContext();
             while ((token = parser.nextToken()) != null) {
                 switch (token) {
-                    case FIELD_NAME -> parseFieldName(parser, context);
+                    case FIELD_NAME -> parseFieldName(parser, context, timeFormat);
                     case END_ARRAY -> {
                         if (context.insideTags) {
                             context.insideTags = false;
